[package]
name = "dfconfig"
version = "0.1.0"
authors = ["Michal Borejszo <michael.borejszo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1"
lazy_static = "1.4.0"

[dev-dependencies]
rand = "0.8"