[package]
name = "dfconfig"
version = "0.1.0"
authors = ["Michal Borejszo <michael.borejszo@gmail.com>"]
repository = "https://github.com/spitfire05/dfconfig-rs"
description = "A config/init file parser for Dwarf Fortress"
categories = ["parser-implementations"]
keywords = ["dwarf-fortress", "parser", "parse", "config", "init"]
license = "MIT"
edition = "2018"
exclude = ["test-data/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
regex = "1"
lazy_static = "1.4.0"

[dev-dependencies]
rand = "0.8"
